--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,7 @@
     </div>
 
     <!-- Footer Section -->
-    <footer class="text-center py-3">
+    <footer class="text-center py-3 mt-auto">
       <p>&copy; 2025 Spitting Bars. All rights reserved.</p>
     </footer>
 
