link css and js to html pages

--- a/templates/user_homepage.html
+++ b/templates/user_homepage.html
@@ -15,7 +15,8 @@
       rel="stylesheet"
     />
     <!-- Custom CSS Link-->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="staticfiles/admin/css/styles.css" />
+    <!-- Custom JavaScript Link-->
     <script defer src="script.js"></script>
   </head>
   <body>
