--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,7 @@
       rel="stylesheet"
     />
     <!-- Custom CSS Link-->
-    <link rel="stylesheet" href="styles.css" />
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="staticfiles/admin/css/styles.css" />
   </head>
   <body>
     <!-- Navigation Bar -->
@@ -94,7 +93,9 @@
     <footer class="text-center py-3 mt-auto">
       <p>&copy; 2025 Spitting Bars. All rights reserved.</p>
     </footer>
-
+    <!-- Bootstrap Link-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JavaScript Link-->
+    <script src="staticfiles/admin/js/script.js"></script>
   </body>
 </html>
