added Allauth working on lyric_list.html

--- a/lyric_app/templates/lyric_app/index.html
+++ b/lyric_app/templates/lyric_app/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-<!--work in progress for concept about Genre list-->
+<!--not in use feel free to modify by Jeff-->
 
 <!-- index.html content starts here -->
 <div class="container">
