--- a/lyric_app/templates/lyric_app/lyric_list.html
+++ b/lyric_app/templates/lyric_app/lyric_list.html
@@ -2,7 +2,6 @@
 {% load static %}
 {% block content %}
 <!--work in progress for concept about Genre list-->
-
 <!-- index.html content starts here -->
 <div class="container">
     <div class="row">
@@ -15,9 +14,9 @@
                             <p class="artist">Artist: none</p>
                         </div> -->
                     </div>
-                    <a href="{% url 'genre_create' %}" class="genre-link faded">
-                        <h2 class="card-title">Create Genre</h2>
-                        <p class="card-text">Genre excerpt</p>
+                    <a href="{% url 'lyric_create' %}" class="lyric-link faded">
+                        <h2 class="card-title">Create lyric</h2>
+                        <!-- <p class="card-text">Genre excerpt</p> -->
                     </a>
                 </div>
             </div>
@@ -25,26 +24,23 @@
 
         <!-- Iterate over the lesson_list to display existing lessons -->
         {% if user.is_authenticated %}
-        {% for genre in genre_list %}
+        {% for lyric in lyrics %}
         <div class="col-md-4">
             <div class="card mb-4">
                 <div class="card-body">
-                    <div class="image-container">
+                    <!-- <div class="image-container">
                         {% if "placeholder" in genre.featured_image.url %}
                         <img class="card-img-top" src="{% static '/images/AmazingTutors.jpg' %}" alt="placeholder image">
                         {% else %}
                         <img class="card-img-top" src=" {{ genre.featured_image.url }}" alt="{{ genre.name }}">
                         {% endif %}
-                        <!-- <div class="image-flash">
-                            <p class="author">Tutor: {{ lesson.author }}</p>
-                        </div> -->
-                    </div>
-                    <a href="{% url 'lyric_list' lesson.slug %}"
-                        class="lesson-link {% if lesson.status == 0 %}faded{% endif %}">
-                        <h2 class="card-title {% if lesson.status == 0 %}faded{% endif %}">{{ lesson.title }}</h2>
-                        <p class="card-text {% if lesson.status == 0 %}faded{% endif %}">{{ lesson.excerpt }}</p>
+                    </div> -->
+                    <a href="{% url 'lyric_detail' lyric.id %}"
+                        class="lyric-link {% if lesson.status == 0 %}faded{% endif %}">
+                        <h2 class="card-title {% if lyric.status == 0 %}faded{% endif %}">{{ lyric.title }}</h2>
+                        <p class="card-text {% if lesson.status == 0 %}faded{% endif %}">{{ lyric.updated_at }}</p>
                     </a>
-                    <p class="card-text text-muted h6">{{ lesson.created_on }}</p>
+                    <!-- <p class="card-text text-muted h6">{{ lesson.created_on }}</p> -->
                 </div>
             </div>
         </div>
