--- a/lyric_app/templates/lyric_app/lyric_create.html
+++ b/lyric_app/templates/lyric_app/lyric_create.html
@@ -1,16 +1,22 @@
 {% extends 'base.html' %}
-
 {% load static %}
 {% load crispy_forms_tags %}
-
-
 {% block content %}
-  <div class="container">
-    <h2>Create Lyric</h2>
-    <form method="POST" enctype="multipart/form-data">
-      {% csrf_token %}
-      {{ lyricform|crispy }}
-      <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-  </div>
-{% endblock %}
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6">
+            <h2>Create Lesson</h2>
+            <p></p>
+
+            <!-- add your form here. Your submit button should 
+                                have the classes of btn, btn-secondary -->
+            <form method="post">
+                {% csrf_token %}
+                <!-- {{ form.as_p }} -->
+                {{ lyricform | crispy }}
+                <button class="btn btn-secondary" type="submit">Save</button>
+            </form>
+        </div>
+    </div>
+</div>
+{% endblock content %}
