styling media player

--- a/lyric_app/templates/lyric_app/lyric_create.html
+++ b/lyric_app/templates/lyric_app/lyric_create.html
@@ -9,7 +9,7 @@
     <div class="mediaplay-section">
       {% block mediaplay %}
         <p>Select Track:</p>
-       
+      
         <select id="audioSelect">
             <option value="{% static 'media/beat1.mp3' %}">Midnight Stalker</option>
             <option value="{% static 'media/beat2.mp3' %}">Nuthin But A</option>
@@ -55,6 +55,7 @@
         </script>
       {% endblock %}
     </div>
+    ewrwerw
     
     <form method="POST" enctype="multipart/form-data">
       {% csrf_token %}
