--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
             integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
             crossorigin="anonymous">
         <!-- Custom CSS -->
+        <!-- Custom CSS -->
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     </head>
 
