removed edit button from home screen which stops unauthorised users editing posts

--- a/lyric_app/templates/lyric_app/lyric_create.html
+++ b/lyric_app/templates/lyric_app/lyric_create.html
@@ -5,7 +5,8 @@
 
 {% block content %}
   <div class="container">
-    <h2>Create Lyric</h2>
+    <h2>Create Your Masterpiece</h2>
+    <p>Use our selection of backing tracks to inspire you</p>
     <div class="mediaplay-section">
       {% block mediaplay %}
         <p>Select Track:</p>
