--- a/lyric_app/templates/lyric_app/index.html
+++ b/lyric_app/templates/lyric_app/index.html
@@ -70,9 +70,9 @@
             <img src="your-image.jpg" class="card-img-top" alt="View Raps" />
             <div class="card-body">
               <p class="card-text">
-                Explore raps from other artists in the community.
+                Explore creative writting from other artists in the community.
               </p>
-              <a href="#" class="btn">View Other Raps</a>
+              <a href="#" class="btn">Our Collection</a>
             </div>
           </div>
         </div>
@@ -81,9 +81,9 @@
             <img src="your-image.jpg" class="card-img-top" alt="Get Feedback" />
             <div class="card-body">
               <p class="card-text">
-                Share your lyrics and get feedback from the community.
+                Share your work and get feedback from the community.
               </p>
-              <a href="#" class="btn">Get Feedback on Your Raps</a>
+              <a href="#" class="btn">Get Feedback on Your work</a>
             </div>
           </div>
         </div>
