--- a/lyric_app/templates/lyric_app/lyric_create.html
+++ b/lyric_app/templates/lyric_app/lyric_create.html
@@ -15,6 +15,7 @@
             <option value="{% static 'media/beat1.mp3' %}">Midnight Stalker</option>
             <option value="{% static 'media/beat2.mp3' %}">Nuthin But A</option>
             <option value="{% static 'media/beat3.mp3' %}">Gimme Dat</option>
+            <option value="{% static 'media/beat4.mp3' %}">Far Out East</option>
         </select>
         <button id="playButton">Play Audio</button>
         <button id="stopButton">Stop Audio</button>
