--- a/lyric_app/templates/lyric_app/lyric_edit.html
+++ b/lyric_app/templates/lyric_app/lyric_edit.html
@@ -66,6 +66,12 @@
             <form method="POST">
                 {{ lyricform | crispy }}
                 {% csrf_token %}
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="is_protected" name="is_protected" {% if lyric.is_protected %}checked{% endif %}>
+                    <label class="form-check-label" for="is_protected">
+                        Protect Lyric (Cannot be deleted)
+                    </label>
+                </div>
                 <button class=" btn btn-secondary" type="submit">Submit</button>
                 <button class="btn btn-delete" lyric_id = {{ lyric.id }}>Delete</button>
             </form>
@@ -96,6 +102,6 @@
 </div>
 {% endblock content %}
 
-<!-- {% block extras %}
+{% block extras %}
 <script src="{% static 'js/lyric.js' %}"></script>
-{% endblock %} -->
+{% endblock %}
