--- a/lyric_app/templates/lyric_app/lyric_list.html
+++ b/lyric_app/templates/lyric_app/lyric_list.html
@@ -37,9 +37,10 @@
                     </div> -->
                     <a href="{% url 'lyric_detail' lyric.id %}" class="lyric-link">
                         <h2 class="card-title {% if lyric.status == 0 %}personal {% else %}published{% endif %}">{{ lyric.title }}</h2>
-                        <span class="card-text">{{ lyric.updated_at }}</span>
-                        <span class="card-text">{{ lyric.updated_at }} artist: {{ lyric.artist }}</span>
-                        <a href="{% url 'lyric_edit' lyric.id %}" class="btn btn-secondary float-end">Edit</a>
+                        <span class="card-text"> <strong>{{ lyric.artist }}</strong></span><br
+                        <span class="card-text"><em>{{ lyric.updated_at }}</em></span>
+                        <span class="card-text"><em>{{ lyric.updated_at }}</em></span>
+                        
                     </a>
                     <!-- <p class="card-text text-muted h6">{{ lesson.created_on }}</p> -->
                      
