fixed filter for directing admin accepted public post to public collection page

--- a/lyric_app/templates/lyric_app/lyric_list.html
+++ b/lyric_app/templates/lyric_app/lyric_list.html
@@ -37,9 +37,10 @@
                     </div> -->
                     <a href="{% url 'lyric_detail' lyric.id %}" class="lyric-link">
                         <h2 class="card-title {% if lyric.status == 0 %}personal {% else %}published{% endif %}">{{ lyric.title }}</h2>
-                        <span class="card-text"> <strong>{{ lyric.artist }}</strong></span><br>
+                        <span class="card-text"> <strong>{{ lyric.artist }} </strong> - <em>{{ lyric.genre }}</em></span><br>
                         <span class="card-text"><em>{{ lyric.updated_at }}</em></span>
-                        <span class="card-text"><em>{{ lyric.updated_at }}</em></span>
+                        <br>
+                        <span class="card-text"><em>approved: {{ lyric.status }}</em></span> <!-- only display if admin approved -->
                         
                     </a>
                     <!-- <p class="card-text text-muted h6">{{ lesson.created_on }}</p> -->
