--- a/lyric_app/templates/lyric_app/lyric_detail.html
+++ b/lyric_app/templates/lyric_app/lyric_detail.html
@@ -34,7 +34,7 @@
         <div class="col card mb-4 mt-3 left top">
             <div class="card-body">
                 <div class="card-text">
-                    {{ lyric.lyric | safe }} <!-- Displaying Lyric of the User>-->
+                    {{ lyric.lyric | linebreaksbr | safe }} <!-- Displaying Lyric of the User>-->
                 </div>
                 <hr />
 
