styling ladning page - ported from Mahmudur css

--- a/lyric_app/templates/lyric_app/index.html
+++ b/lyric_app/templates/lyric_app/index.html
@@ -6,8 +6,8 @@
 <header class="container-fluid text-center my-5">
   <img src="your-image.jpg" class="img-fluid" alt="Hero Image" />
   <h1 class="mt-4">Express Yourself Through Words</h1>
-  <p>Join the community and start creating your own raps today!</p>
-  <a href="#" class="btn btn-primary btn-lg">Register Now</a>
+  <p class="hero-subtitle">Join the community and start creating your own raps today!</p>
+  <a href="#" class="btn btn-lg">Register Now</a>
 </header>
 
 <!-- Features Section -->
