--- a/lyric_app/templates/lyric_app/lyric_detail.html
+++ b/lyric_app/templates/lyric_app/lyric_detail.html
@@ -1,23 +1,85 @@
-{% extends 'base.html' %}
-{% block content %}
-{% load static %}
+{% extends 'base.html' %} {% block content %} {% load static %}
 
 <div class="masthead">
-    <div class="container">
-        <div class="row g-0">
-            <div class="col-md-6 masthead-text">
-                <h4 class="lyric-title">{{ lyric.title }}</h4>
-                <p class="lyric-subtitle">{{ lyric.artist }} | {{ lyric.updated_at }} {{ lyric.is_approved }}</p>
-                <div class="masthead-buttons">
-                    <!-- Edit Lesson Button-->
-                    {% if user.is_authenticated and user == lyric.artist %}
-                    <a href="{% url 'lyric_edit' lyric.id %}" class="btn btn-edit">Edit Lyric</a>
-                    {% endif %}
+  <div class="container">
+    <div class="row g-0">
+      <div class="col-md-6 masthead-text">
+        <h4 class="lyric-title">{{ lyric.title }}</h4>
+        <p class="lyric-subtitle">
+          {{ lyric.artist }} | {{ lyric.updated_at }} {{ lyric.is_approved }}
+        </p>
+        <div class="mediaplay-section">
+          {% block mediaplay %}
+          <p>Select Track:</p>
+          <select id="audioSelect">
+            <option value="{% static 'media/beat1.mp3' %}">
+              Midnight Stalker
+            </option>
+            <option value="{% static 'media/beat2.mp3' %}">Nuthin But A</option>
+            <option value="{% static 'media/beat3.mp3' %}">Gimme Dat</option>
+            <option value="{% static 'media/beat4.mp3' %}">Far Out East</option>
+          </select>
+          <button id="playButton">Play Audio</button>
+          <button id="stopButton">Stop Audio</button>
+          <script>
+            const audioCtx = new (window.AudioContext ||
+              window.webkitAudioContext)();
+            let source;
 
-                </div>
-            </div>
-            <!--image expansion -->
-            <!-- <div class="d-none d-md-block col-md-6 masthead-image">
+            document
+              .getElementById("playButton")
+              .addEventListener("click", function () {
+                const audioFilePath =
+                  document.getElementById("audioSelect").value;
+
+                fetch(audioFilePath)
+                  .then((response) => response.arrayBuffer())
+                  .then((buffer) => audioCtx.decodeAudioData(buffer))
+                  .then((audioBuffer) => {
+                    if (source) {
+                      source.stop();
+                    }
+                    source = audioCtx.createBufferSource();
+                    source.buffer = audioBuffer;
+                    source.loop = true;
+
+                    source.connect(audioCtx.destination);
+                    source.start(0);
+                  })
+                  .catch((error) =>
+                    console.error("Error fetching audio:", error)
+                  );
+              });
+
+            document
+              .getElementById("stopButton")
+              .addEventListener("click", function () {
+                if (source) {
+                  source.stop();
+                }
+              });
+
+            document
+              .getElementById("audioSelect")
+              .addEventListener("change", function () {
+                if (source) {
+                  source.stop();
+                }
+              });
+          </script>
+          {% endblock %}
+        </div>
+        <div class="masthead-buttons">
+          <!-- Edit Lesson Button-->
+          {% if user.is_authenticated and user == lyric.artist %}
+          <a href="{% url 'lyric_edit' lyric.id %}" class="btn btn-edit"
+            >Edit Lyric</a
+          >
+          {% endif %}
+        </div>
+      </div>
+      <!--image expansion -->
+      <!-- <div class="d-none d-md-block col-md-6 masthead-image">
                 {% if "placeholder" in lesson.featured_image.url %}
                 <img src="{% static 'images/placeholder.jpg' %}" class="scale" alt="placeholder image">
                 {% else %}
@@ -25,26 +87,23 @@
                 {% endif %}
 
             </div> -->
-        </div>
     </div>
+  </div>
 </div>
 
 <div class="container">
-    <div class="row">
-        <div class="col card mb-4 mt-3 left top">
-            <div class="card-body">
-                <div class="card-text">
-                    {{ lyric.lyric | linebreaksbr | safe }} <!-- Displaying Lyric of the User>-->
-                </div>
-                <hr />
-
-            </div>
+  <div class="row">
+    <div class="col card mb-4 mt-3 left top">
+      <div class="card-body">
+        <div class="card-text">
+          {{ lyric.lyric | linebreaksbr | safe }}
+          <!-- Displaying Lyric of the User>-->
         </div>
+        <hr />
+      </div>
     </div>
-    <hr />
-
-
+  </div>
+  <hr />
 </div>
-
 
 {% endblock content %}
