--- a/lyric_app/templates/lyric_app/index.html
+++ b/lyric_app/templates/lyric_app/index.html
@@ -4,7 +4,6 @@
 
 <!-- Hero Section -->
 <header class="container-fluid text-center my-5">
-  <img src="readme_docs/Spitting-logo.png" class="img-fluid" alt="Hero Image" />
   <h1 class="mt-4">Express Yourself Through Words</h1>
   <p class="hero-subtitle">Join the community and start creating your own raps today!</p>
   <a href="#" class="btn btn-lg">Register Now</a>
@@ -28,7 +27,7 @@
       <div class="card">
         <div class="card-body">
           <p class="card-text">
-            My Raps.
+            My Raps.<br><br> <!-- cheat alignment for now -->
           </p>
           <a href="{% url 'user_page' %}" class="btn">Explore all my Raps</a>
         </div>
