--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,8 +5,9 @@ body {
   display: flex;
   flex-direction: column;
   font-family: "Poppins", sans-serif;
-  background: url("/static/images/Spit.png") no-repeat center
-    center fixed;
+  background: url("/static/images/Spit.png") no-repeat center center fixed;
+  background-color: rgba(0, 0, 0, 0.479);
+  background-blend-mode: overlay;
   background-size: cover;
   color: white;
   margin: 0;
@@ -33,6 +34,19 @@ body {
   color: #ffc107 !important;
 }
 
+/* Account section */
+p.text-end a {
+  color: #ffc107;
+  text-shadow: #000 2px 2px 4px;
+  margin-left: auto;
+}
+
+.text-end  {
+  color: #ffc107;
+  text-shadow: #000 2px 2px 4px;
+  margin-left: auto;
+}
+
 /* Hero Section */
 .hero-header {
   text-align: center;
@@ -43,6 +57,7 @@ body {
   height: 60vh;
   padding: 20px;
 }
+
 
 h1 {
   font-size: 2.5rem;
@@ -56,11 +71,16 @@ h1 {
   padding: 1rem 1rem;
 }
 
+a {
+  text-decoration: none;
+  color: white;
+}
+
 .hero-subtitle {
   font-size: 1.2rem;
   margin-bottom: 20px;
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
-  background-color: rgba(0, 0, 0, 0.74);
+  text-shadow: 2px 2px 4px rgb(0, 0, 0);
+  background-color: rgba(228, 3, 3, 0.74);
   width: fit-content;
   padding: 1rem;
   margin: 0.5rem auto;
@@ -101,6 +121,7 @@ h1 {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
 .card:hover {
@@ -109,7 +130,13 @@ h1 {
 
 .card-body {
   text-align: center;
+  color: white;
 }
+
+.card-title {
+  color: #ffc107;
+} 
+
 
 /* Buttons inside Cards */
 .card .btn {
