--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
 
 <head>
     <title>Spittin' Bars</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
     <!-- Google Fonts Link from index new-->
