fixed: admin accept or deny posts for public collection

--- a/lyric_app/templates/lyric_app/lyric_list.html
+++ b/lyric_app/templates/lyric_app/lyric_list.html
@@ -24,7 +24,7 @@
                         <span class="card-text"><em>{{ lyric.updated_at }}</em></span>
                         <br>
                         <span class="card-text"><em>approved: {{ lyric.status }}</em></span> <!-- only display if admin approved -->
-                        
+                        <span class="card-text"><em>approved: {{ lyric.admin_approve }}</em></span> <!-- only display if admin approved -->
                     </a>
                     <!-- <p class="card-text text-muted h6">{{ lesson.created_on }}</p> -->
                      
