--- a/lyric_app/templates/lyric_app/user_page.html
+++ b/lyric_app/templates/lyric_app/user_page.html
@@ -30,6 +30,7 @@
                         <h2 class="card-title">{{ lyric.title }}</h2>
                         <p>{{ lyric.genre }} </p>
                         <p>{{ lyric.created_at }} </p>
+                        <p><em>{{ lyric.get_admin_accept_display }}</em> </p>
                     </a>
                 </div>
             </div>
