fixed: url for register now

--- a/lyric_app/templates/lyric_app/index.html
+++ b/lyric_app/templates/lyric_app/index.html
@@ -6,7 +6,7 @@
 <header class="container-fluid text-center my-5">
   <h1 class="mt-4">Express Yourself Through Words</h1>
   <p class="hero-subtitle">Join the community and start creating your own raps today!</p>
-  <a href="#" class="btn btn-lg">Register Now</a>
+  <a href="{% url 'account_signup' %}" class="btn btn-lg">Register Now</a>
 </header>
 
 <!-- Features Section -->
