--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
                     style="width: 100px; height: auto;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
                 aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon">--</span>
+                <i class="fas fa-bars" "></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -62,7 +62,6 @@
 
                 </ul>
                 <span class="navbar-text text-muted">
-                    Express yourself through words
                 </span>
             </div>
         </div>
